@@ -4,13 +4,14 @@
 namespace Consts {
     Q_CONSTEXPR char ORGANIZATION[] = "Ambiesoft";
     Q_CONSTEXPR char APPNAME[] = "autosavememo";
-    Q_CONSTEXPR char APPVER[] = "1.0.11";
+    Q_CONSTEXPR char APPVER[] = "1.0.12";
 
     Q_CONSTEXPR char SECTION_GEOMETRY[] = "geometry";
     Q_CONSTEXPR char SECTION_WORDWRAP[] = "WordWrap";
 
     Q_CONSTEXPR char SECTION_FILEOPENDIRECTORY[] = "FileOpenDirectory";
 
-    Q_CONSTEXPR char SECTION_FONT[] = "WordWrap";
+    Q_CONSTEXPR char SECTION_FONT[] = "Font";
+    Q_CONSTEXPR char SECTION_STARTWITHAUTOSAVE[] = "StartWithAutoSave";
 }
 #endif // CONSTS_H
