@@ -1,3 +1,6 @@
+2020/01/17 ver1.0.12
+Option 'Start With AutoSave'
+
 2019/04/27 ver1.0.11
 New build env
 
